# Reality-Creation-Profile-Engine

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Astrological Manifestation Analyst Construction.md  CHANGELOG.md  Dockerfile  ONTOLOGY.md  README.md  docker-compose.yml  entrypoint.sh  fly.toml  implementation_plan.md  installation_issue_summary.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: regression.yml
alembic/: env.py
alembic/versions/: 0001_initial_0001_initial_schema_setup_with_.py
assets/: typology_questions.yml
config/: kafka.py
config/keys/: dummy_jwt_private_key.pem  dummy_jwt_public_key.pem
docs/prototypes/: prototype_assessment.html
events/schemas/: chart_events_v1.avsc  log_events_v1.avsc  profile_events_v1.avsc  typology_events_v1.avsc
infra/docker/: docker-compose.yml
infra/sql/: core_schema.sql
schemas/kafka/: typology_assessed.avsc
services/: __init__.py
services/chart_calc/: __init__.py  docker-compose.dev.yml  requirements.txt
services/kafka/: producer.py
services/kg/: Dockerfile  __init__.py  main.py  requirements.txt
services/typology_engine/: README.md  definitions.py  engine.py  loader.py  models.py  regression.py  results_generator.py  scorer.py  scoring_engine.py
src/: constants.py
src/assessment/: __init__.py
src/astrology/: __init__.py  calculator.py  definitions.py  schema_parser.py
src/auth/: crypto.py  jwt.py  refresh_token_store.py  schemas.py
src/cache/: connection.py  decorators.py  utils.py
src/chart_calc/: app.py
src/db/: cache.py  database.py  models.py  session.py
src/events/: consumer_base.py  producer.py
src/human_design/: __init__.py  client.py  (+1 more)
tests/: conftest.py  test_integration.py  test_main_api.py
(+125 files in other folders)
