[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reality_creation_profile_engine"
version = "0.1.0"
description = "Reality Creation Profile Engine"
readme = "README.md"
requires-python = ">=3.9" # Specify your minimum Python version
# Add classifiers, authors, etc. as needed
# dependencies = [] # Dependencies are listed in requirements.txt

[tool.setuptools.packages.find]
where = ["src"] # Look for packages in the 'src' directory

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "services/chart_calc/tests",
    "services/kg/tests"
]
# python_paths = ["."] # Removed this line
addopts = "--strict-config --strict-markers --import-mode=importlib"
markers = [
    "e2e: marks tests as end-to-end tests",
    "integration: marks tests as integration tests"
]
asyncio_mode = "auto" # Or "strict" - helps with asyncio tests
asyncio_default_fixture_loop_scope = "function"